# openclaw-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: probe.py  scan.py
src/clawmon/: config.py  db.py  main.py  models.py
src/clawmon/dashboard/: stats.py
src/clawmon/scanner/: censys_client.py  enricher.py  fingerprinter.py  port_scanner.py
static/: style.css
templates/: dashboard.html
tests/: test_db.py  test_fingerprinter.py  test_port_scanner.py
